--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "Dusk Graham",
   "license": "GPL-3.0",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.0"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "4.8"
   }
 }
